chore: add auth provider
