# auth/docs/swagger.json
@@ -53,6 +53,15 @@
                     "application/json"
                 ],
                 "summary": "StartOAuth",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Provider: google",
+                        "name": "provider",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "307": {
                         "description": "Temporary Redirect"
@@ -76,6 +85,15 @@
                     "application/json"
                 ],
                 "summary": "OAuthCallback",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Provider: google",
+                        "name": "provider",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "307": {
                         "description": "Temporary Redirect"
